2024-09-21T01:11:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10968399111 # 425
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-21
* notice: last 14d: unq all: 6 8
* notice: prev accum: outdated-unq outdated-all / unq all: 695 1166 / 705 1176
* notice: next accum: outdated-unq outdated-all / unq all: 697 1168 / 705 1176
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-09-06] / []

2024-09-19T01:12:40Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10932644399 # 423
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-19
* notice: last 14d: unq all: 7 10
* notice: prev accum: outdated-unq outdated-all / unq all: 695 1166 / 704 1175
* notice: next accum: outdated-unq outdated-all / unq all: 695 1166 / 705 1176
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2024-09-18]

2024-09-18T01:11:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10913717399 # 422
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-18
* notice: last 14d: unq all: 6 9
* notice: prev accum: outdated-unq outdated-all / unq all: 694 1165 / 702 1173
* notice: next accum: outdated-unq outdated-all / unq all: 695 1166 / 704 1175
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2024-09-04] / [2024-09-17]

2024-09-17T00:59:26Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10894593866 # 421