@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2024-09-21T01:11:16Z",
+  "timestamp" : "2024-09-24T01:14:42Z",
   "count_outdated" : 1168,
   "uniques_outdated" : 697,
-  "count" : 1176,
-  "uniques" : 705,
+  "count" : 1177,
+  "uniques" : 706,
   "clones" : [
     {
       "timestamp": "2024-09-11T00:00:00Z",
@@ -61,6 +61,15 @@
     },
     {
       "timestamp": "2024-09-18T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2024-09-23T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
