@@ -1,3 +1,12 @@
+2024-09-24T01:14:42Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/11005141382 # 428
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-24
+* notice: last 14d: unq all: 6 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 697 1168 / 705 1176
+* notice: next accum: outdated-unq outdated-all / unq all: 697 1168 / 706 1177
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2024-09-23]
+
 2024-09-21T01:11:16Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/10968399111 # 425
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2024-09-21
